# python-cmake-example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
