cmake_minimum_required(VERSION 3.0)
project(example) # project name

FIND_PACKAGE(PythonInterp 3.7 REQUIRED)
FIND_PACKAGE(PythonLibs 3.7 REQUIRED)

SET(EXECUTABLE example) # executable file name
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
SET(PROJECT_LIBRARIES ${PYTHON_LIBRARIES} )
SET(PROJECT_INCLUDES ${PYTHON_INCLUDE_DIRS} )

FILE(GLOB SRC_FILES main.cpp) # src file

INCLUDE_DIRECTORIES(${PROJECT_INCLUDES})
ADD_EXECUTABLE(${EXECUTABLE}  ${SRC_FILES})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PROJECT_LIBRARIES})

MESSAGE(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
MESSAGE(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
MESSAGE(STATUS "Project_include_path = ${PROJECT_INCLUDES}")
MESSAGE(STATUS "Project_libraries_path = ${PROJECT_LIBRARIES}")